done with css and using dom to get html element to store them in variables

--- a/DOM-CHECPOINT/style/style.css
+++ b/DOM-CHECPOINT/style/style.css
@@ -102,6 +102,10 @@ header #shoppingBag span{
     left: 1036px;
 }
 
+.active aside{
+    transform: translateX(-200px);
+}
+
 /* i need to fix active container */
 
 
