--- a/DOM-CHECPOINT/style/style.css
+++ b/DOM-CHECPOINT/style/style.css
@@ -45,8 +45,9 @@ header #shoppingBag span{
 
 .list{
     display: grid;
-    grid-template-columns: (3,1fr);
-    column-gap: 20px;
+    grid-template-columns: repeat(3,1fr);
+    /* grid-template-rows: (2,1fr); */
+    column-gap: 15px;
     row-gap: 20px;
     margin-top: 50px;
 }
@@ -100,6 +101,31 @@ header #shoppingBag span{
 
 .active{
     left: 70%;
+}
+
+.item{
+    text-align: center;
+    background-color: #dcebe1;
+    padding: 20px;
+    box-shadow: 0 50px 50px #757676;
+    letter-spacing: 1px;
+}
+.item img{
+    width: 90%;
+}
+.item .title{
+    font-weight: 600;
+}
+
+.item .price{
+    margin: 10px;
+}
+
+.item button{
+    background-color: #1c1f25;
+    color: #fff;
+    padding: 10px;
+    width: 100%;
 }
 
 /* .active aside{
